--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ go:
   - 1.4.2
 
 before_install:
-  - sudo add-apt-repository -y ppa:ricotz/testing
-  - sudo add-apt-repository -y ppa:gnome3-team/gnome3
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y gtk+3.0 libgtk-3-dev
+  - sudo apt-get install -qq -y libgtk-3-dev
+  # - sudo apt-get install -qq -y gtk+3.0 libgtk-3-dev
 
 install:
-  - go get -tags gtk_3_6 -v github.com/twstrike/gotk3
+  #- go get -tags gtk_3_6 -v github.com/twstrike/gotk3
+  - make deps
 
-install: make deps
 script: make ci
 
-sudo: true
+sudo: required
+dist: trusty
