--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ dist: trusty
 sudo: required
 language: go
 
+os:
+  - linux
+  - osx
+
+matrix:
+  allow_failures:
+    - os: osx
+
 go:
   - tip
   - 1.5
