--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ matrix:
   include:
     - go: 1.5
       env: DEPLOY=true
+      os: linux
+    - go: 1.5
+      env: DEPLOY=true
+      os: osx
 
 go:
   - tip
