--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_deploy: ci/release
 deploy:
   on:
     condition: $DEPLOY = "true"
+    branch: release
   provider: bintray
   file: ci/bintray.json
   user:
