Maybe it should be like this

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ matrix:
   include:
     - go: 1.5
       env: DEPLOY=true
+      env: TRAVIS_BRANCH=release
       os: linux
     - go: 1.5
       env: DEPLOY=true
+      env: TRAVIS_BRANCH=release
       os: osx
   allow_failures:
     - os: osx
@@ -28,7 +30,6 @@ before_deploy: ci/release
 deploy:
   on:
     condition: $DEPLOY = "true"
-    branch: release
   provider: bintray
   file: ci/bintray.json
   user:
