--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,12 @@ matrix:
     - os: osx
   fast_finish: true
 
-before_install: ci/install-deps-${TRAVIS_OS_NAME:-linux}
+before_install: 
+  - ci/install-deps-${TRAVIS_OS_NAME:-linux}
+  - apt-get install -qq -y xvfb
+  - "export DISPLAY=:99.0"
+  - sh -e /etc/init.d/xvfb start
+  - /usr/bin/Xvfb $DISPLAY 2>1 > /dev/null &
 install: make deps
 script: make ci
 
