--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ matrix:
 
 before_install: 
   - ci/install-deps-${TRAVIS_OS_NAME:-linux}
-  - apt-get install -qq -y xvfb
+  - sudo apt-get install -qq -y xvfb
   - "export DISPLAY=:99.0"
   - sh -e /etc/init.d/xvfb start
-  - /usr/bin/Xvfb $DISPLAY 2>1 > /dev/null &
+  - sudo /usr/bin/Xvfb $DISPLAY 2>1 > /dev/null &
 install: make deps
 script: make ci
 
