Add inteface tests to pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ matrix:
     - os: osx
   fast_finish: true
 
-before_install: 
+before_install:
   - "export DISPLAY=:99.0"
   - ci/install-deps-${TRAVIS_OS_NAME:-linux}
+  - apt-get install dogtail
 install: make deps
 script: make ci
 
