use gen_ui_defs in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
 before_install: 
   - "export DISPLAY=:99.0"
   - ci/install-deps-${TRAVIS_OS_NAME:-linux}
+  - apt-get -y install ruby
 install: make deps
 script: make ci
 
