--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ matrix:
 
 before_install:
   - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
   - "export COYIM_PATH=$(pwd)/bin/coyim"
   - ci/install-deps-${TRAVIS_OS_NAME:-linux}
 install: make deps
