--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,10 @@ matrix:
   fast_finish: true
 
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-  - "export COYIM_PATH=$(pwd)/bin/coyim"
   - ci/install-deps-${TRAVIS_OS_NAME:-linux}
+  - "export DISPLAY=:99.0"
+  - [[ "$TRAVIS_OS_NAME" = "linux" ]] && sh -e /etc/init.d/xvfb start && sleep 3
+  - "export COYIM_PATH=$(pwd)/bin/coyim"
 install: make deps
 script: make ci
 
