try 32bit build in windows

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,8 +25,7 @@ install:
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz > $nul
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar > $nul
   - SET PATH=%PATH%;%MSYS_PATH%\usr\bin
-  - SET PATH=%PATH%;%MSYS_PATH%\mingw32\bin
-  - SET PATH=%PATH%;%MSYS_PATH%\mingw64\bin
+  - SET PATH=%PATH%;%MSYS_PATH%\mingw%MSYS2_BITS%\bin
   - '%MSYS_PATH%\usr\bin\bash -lc "echo update-core starting..." 2> $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "update-core" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "echo install-deps starting..."'
