--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,8 +2,12 @@ platform:
   - x64
 environment:
   global:
-    MSYS2_BASEVER: 20150916
+    APPVEYOR_OS_NAME: windows
     GOPATH: c:\gopath
+    BINTRAY_USER:
+      secure: HvXDg/3xn3Du2GPXPyf1tQ==
+    BINTRAY_APIKEY:
+      secure: pKFoGMJ1yEvd9hI9yF8a7D5fp5xGt53GdSrV3/g2CVbWiUfNoAXyYzHC1R4jSUqQ
   matrix:
     #- MSYS2_ARCH: x86_64
     #  MSYS2_BITS: 64
@@ -17,6 +21,7 @@ environment:
       MSYS2_BITS: 64
       MSYSTEM: MINGW64
       METHOD: cross
+      MSYS2_BASEVER: 20150916
 install:
   - mkdir %GOPATH%\src\github.com\twstrike\
   - xcopy %APPVEYOR_BUILD_FOLDER%\* %GOPATH%\src\github.com\twstrike\coyim /e /i /EXCLUDE:%MSYS_PATH% > $nul
@@ -33,8 +38,8 @@ install:
   - '%MSYS_PATH%\usr\bin\bash -lc "echo install-deps starting..."'
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy autoconf" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy automake" > $nul'
-  - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy tree" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy make" > $nul'
+  - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy mingw-w64-sed" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy mingw-w64-%MSYS2_ARCH%-libiconv" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy mingw-w64-%MSYS2_ARCH%-gcc" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy mingw-w64-%MSYS2_ARCH%-gdb" > $nul'
@@ -45,7 +50,12 @@ install:
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy mingw-w64-%MSYS2_ARCH%-pkg-config" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "yes|pacman --noconfirm -Sc" > $nul'
   - if "%METHOD%"=="cross" %MSYS_PATH%\autorebase.bat > $nul
+  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/twstrike/coyim && make deps"'
 build_script:
-  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/twstrike/coyim && make deps gen-ui-defs build-gui-win"'
+  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/twstrike/coyim && make ci"'
 artifacts:
   - path: '%GOPATH%\src\github.com\twstrike\coyim\bin\coyim.exe'
+before_deploy:
+  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/twstrike/coyim && ci/release"'
+deploy_script:
+  - '%MSYS_PATH%\usr\bin\bash -lc "gem install dpl && cd /c/gopath/src/github.com/twstrike/coyim && dpl --provider=bintray --file=ci/bintray.json --user=%BINTRAY_USER% --key=%BINTRAY_APIKEY%"'
