--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,7 @@ platform:
 environment:
   global:
     APPVEYOR_OS_NAME: windows
+    RUBY_VERSION: "22-x64"
     GOPATH: c:\gopath
     BINTRAY_USER:
       secure: HvXDg/3xn3Du2GPXPyf1tQ==
@@ -31,6 +32,7 @@ install:
   - if "%METHOD%"=="cross" appveyor DownloadFile http://kent.dl.sourceforge.net/project/msys2/Base/%MSYS2_ARCH%/msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz > $nul
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar > $nul
+  - SET PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
   - SET PATH=%PATH%;%MSYS_PATH%\usr\bin
   - SET PATH=%PATH%;%MSYS_PATH%\mingw%MSYS2_BITS%\bin
   - '%MSYS_PATH%\usr\bin\bash -lc "echo update-core starting..." 2> $nul'
