--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,6 +33,8 @@ install:
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz > $nul
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar > $nul
   - SET PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
+  - gem --version
+  - update_rubygems --no-ri --no-rdoc
   - SET PATH=%PATH%;%MSYS_PATH%\usr\bin
   - SET PATH=%PATH%;%MSYS_PATH%\mingw%MSYS2_BITS%\bin
   - '%MSYS_PATH%\usr\bin\bash -lc "echo update-core starting..." 2> $nul'
@@ -60,4 +62,4 @@ before_deploy:
   - '%MSYS_PATH%\usr\bin\bash -lc "pacman --noconfirm --needed -Sy sed" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/twstrike/coyim && ci/release"'
 deploy_script:
-  - '%MSYS_PATH%\usr\bin\bash -lc "gem install dpl && cd /c/gopath/src/github.com/twstrike/coyim && dpl --provider=bintray --file=ci/bintray.json --user=%BINTRAY_USER% --key=%BINTRAY_APIKEY%"'
+  - '%MSYS_PATH%\usr\bin\bash -lc "gem install dpl --no-ri --no-rdoc && cd /c/gopath/src/github.com/twstrike/coyim && dpl --provider=bintray --file=ci/bintray.json --user=%BINTRAY_USER% --key=%BINTRAY_APIKEY%"'
