path priority is from left to right

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,10 +33,8 @@ install:
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz > $nul
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar > $nul
   - SET PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
-  - gem --version
-  - update_rubygems --no-ri --no-rdoc
-  - SET PATH=%PATH%;%MSYS_PATH%\usr\bin
-  - SET PATH=%PATH%;%MSYS_PATH%\mingw%MSYS2_BITS%\bin
+  - SET PATH=%MSYS_PATH%\usr\bin;%PATH%
+  - SET PATH=%MSYS_PATH%\mingw%MSYS2_BITS%\bin;%PATH%
   - '%MSYS_PATH%\usr\bin\bash -lc "echo update-core starting..." 2> $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "update-core" > $nul'
   - '%MSYS_PATH%\usr\bin\bash -lc "echo install-deps starting..."'
