--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,6 +33,8 @@ install:
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz > $nul
   - if "%METHOD%"=="cross" 7z x msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar > $nul
   - SET PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
+  - appveyor DownloadFile http://curl.haxx.se/ca/cacert.pem
+  - xcopy cacert.pem C:\Ruby%RUBY_VERSION%\lib\ruby\2.2.0\rubygems\ssl_certs
   - SET PATH=%MSYS_PATH%\usr\bin;%PATH%
   - SET PATH=%MSYS_PATH%\mingw%MSYS2_BITS%\bin;%PATH%
   - '%MSYS_PATH%\usr\bin\bash -lc "echo update-core starting..." 2> $nul'
