I want to see our keyboard

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -25,10 +25,11 @@ clean-gui-test:
 
 #TODO: this should only be called on a linux environment
 gui-test: clean-gui-test ../bin/coyim
-ifeq ($(shell uname), Linux)
-	git clone https://github.com/twstrike/coyim-testing.git gui-test
-	cd gui-test && COYIM_PATH="../../bin/coyim -debug" behave --stop
-endif
+	setxkbmap -query
+# ifeq ($(shell uname), Linux)
+# 	git clone https://github.com/twstrike/coyim-testing.git gui-test
+#	cd gui-test && COYIM_PATH="../../bin/coyim -debug" behave --stop
+# endif
 
 clean-release:
 	$(RM) bin/*
