Need to explicitly enable cgo
See: 90c31d67ccff1b2054617fac93b7acb107e52b6b

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -37,7 +37,7 @@ cross-compile:
 	gox -build-toolchain || true
 
 	# windows does not have syscall.SIGWINCH
-	cd .. && gox -os "!windows" -output "release/{{.Dir}}-cli_{{.OS}}_{{.Arch}}"
+	cd .. && gox -os "!windows" -cgo -output "release/{{.Dir}}-cli_{{.OS}}_{{.Arch}}"
 
 clean-mac-bundle:
 	$(RM) -r ../bin/mac-bundle
