--- a/ci/Makefile
+++ b/ci/Makefile
@@ -1,6 +1,3 @@
-GTK_VERSION=$(shell pkg-config --modversion gtk+-3.0 | tr . _ | cut -d '_' -f 1-2)
-GTK_BUILD_TAG="gtk_$(GTK_VERSION)"
-
 ci: get lint doctor test coveralls
 
 get:
@@ -40,7 +37,7 @@ cross-compile:
 	gox -build-toolchain || true
 
 	# windows does not have syscall.SIGWINCH
-	cd .. && gox -tags $(GTK_BUILD_TAG) -os "!windows" -cgo -output "release/{{.Dir}}-cli_{{.OS}}_{{.Arch}}"
+	cd .. && gox -os "!windows" -tags "cli" -output "release/{{.Dir}}-cli_{{.OS}}_{{.Arch}}"
 
 clean-mac-bundle:
 	$(RM) -r ../bin/mac-bundle
