--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,4 +34,6 @@ artifacts:
   - path: coyim.zip
     name: CoyIM
 deploy_script:
-  - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/twstrike/coyim/coyim-bin/%APPVEYOR_REPO_TAG_NAME%/windows-bundle/CoyIM.zip?override=1&publish=1"
+  - SET APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_BRANCH%
+  - if "%APPVEYOR_REPO_TAG%" == "true" set APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_TAG_NAME%
+  - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/twstrike/coyim/coyim-bin/%APPVEYOR_BUILD_VERSION%/windows/CoyIM.zip?override=1&publish=1"
