--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -36,4 +36,4 @@ artifacts:
 deploy_script:
   - SET APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_BRANCH%
   - if "%APPVEYOR_REPO_TAG%" == "true" set APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_TAG_NAME%
-  - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/twstrike/coyim/coyim-bin/%APPVEYOR_BUILD_VERSION%/windows/CoyIM.zip?override=1&publish=1"
+  - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/twstrike/coyim/coyim-bin/%APPVEYOR_BUILD_VERSION%/%APPVEYOR_BUILD_VERSION%/windows/CoyIM.zip?override=1&publish=1"
