Adds Arabic dir for i18n

--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -14,6 +14,7 @@ TEMPLATE_UI=$(DOMAIN)-ui.pot
 TEMPLATE_CODE=$(DOMAIN)-code.pot
 
 TRANSLATIONS=\
+	ar/LC_LC_MESSAGES/$(DOMAIN).mo \
 	en_US/LC_MESSAGES/$(DOMAIN).mo \
 	pt_BR/LC_MESSAGES/$(DOMAIN).mo \
 	sv_SE/LC_MESSAGES/$(DOMAIN).mo
