Remove temporary catalogs and generate a single catalog

--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -10,25 +10,17 @@ IN_FILES=$(shell find ../gui -name "*.go" ! -path "gui/definitions/*")
 # needed.
 DOMAIN=coy
 
-TEMPLATE_UI=$(DOMAIN)-ui.pot
-TEMPLATE_CODE=$(DOMAIN)-code.pot
-
 TRANSLATIONS=\
 	ar/LC_LC_MESSAGES/$(DOMAIN).mo \
 	en_US/LC_MESSAGES/$(DOMAIN).mo \
 	pt_BR/LC_MESSAGES/$(DOMAIN).mo \
 	sv_SE/LC_MESSAGES/$(DOMAIN).mo
 
-gettext: $(TEMPLATE_UI) $(TEMPLATE_CODE) $(TRANSLATIONS)
+gettext: $(TRANSLATIONS)
 
-$(TEMPLATE_UI): $(DEFINITIONS)
-	xgettext --package-name=$(DOMAIN) --default-domain=$(DOMAIN) --from-code=utf-8 -L glade $(DEFINITIONS) -o $(TEMPLATE_UI)
-
-$(TEMPLATE_CODE): $(IN_FILES)
-	xgettext --package-name=$(DOMAIN) --default-domain=$(DOMAIN) --from-code=utf-8 -L python $(IN_FILES) --keyword=Local -o $(TEMPLATE_CODE)
-
-$(DOMAIN).pot: $(TEMPLATE_CODE) $(TEMPLATE_UI)
-	msgcat $(TEMPLATE_CODE) $(TEMPLATE_UI) > $(DOMAIN).pot
+$(DOMAIN).pot: $(DEFINITIONS) $(IN_FILES)
+	xgettext --package-name=$(DOMAIN) --default-domain=$(DOMAIN) --from-code=utf-8 -L glade $(DEFINITIONS) -o $(DOMAIN).pot
+	xgettext --package-name=$(DOMAIN) --default-domain=$(DOMAIN) --from-code=utf-8 -L python $(IN_FILES) --keyword=Local -j -o $(DOMAIN).pot
 
 %.po: $(DOMAIN).pot
 	./update-locales $(DOMAIN).pot $@
