--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,9 @@ matrix:
       os: osx
   allow_failures:
     - os: osx
-    - go: tip
+    - go:
+      - tip
+      - 1.6
     - env: RELEASE=true
   fast_finish: true
 
