Adds chinese translation

--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -14,7 +14,8 @@ TRANSLATIONS=\
 	ar/LC_MESSAGES/$(DOMAIN).mo \
 	en_US/LC_MESSAGES/$(DOMAIN).mo \
 	pt_BR/LC_MESSAGES/$(DOMAIN).mo \
-	sv_SE/LC_MESSAGES/$(DOMAIN).mo
+	sv_SE/LC_MESSAGES/$(DOMAIN).mo \
+	zh_Hans_CN/LC_MESSAGES/$(DOMAIN).mo
 
 gettext: $(TRANSLATIONS)
 
