--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -15,7 +15,8 @@ TRANSLATIONS=\
 	en_US/LC_MESSAGES/$(DOMAIN).mo \
 	pt_BR/LC_MESSAGES/$(DOMAIN).mo \
 	sv_SE/LC_MESSAGES/$(DOMAIN).mo \
-	zh_CN/LC_MESSAGES/$(DOMAIN).mo
+	zh_CN/LC_MESSAGES/$(DOMAIN).mo \
+	es_EC/LC_MESSAGES/$(DOMAIN).mo
 
 gettext: $(TRANSLATIONS)
 
