--- a/reproducible/docker/Makefile
+++ b/reproducible/docker/Makefile
@@ -4,7 +4,7 @@ default:
 	docker build -t $(IMAGE_NAME) -f Dockerfile .
 
 build:
-	docker run -e REFERENCE_DATETIME="$(REFERENCE_DATETIME)" $(IMAGE_NAME)
+	docker run -e REFERENCE_DATETIME="$(REFERENCE_DATETIME)" -i -t $(IMAGE_NAME)
 
 run:
 	docker run -e REFERENCE_DATETIME="$(REFERENCE_DATETIME)" -i -t $(IMAGE_NAME) bash
