--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ branches:
     - windows
 go:
   - tip
-  - 1.6
-  - 1.6.1
-  - 1.5.3
-  - 1.4.3
+  - 1.6.3
+  - 1.5.4
+  - 1.4.3 # for Tails
 
 matrix:
   include:
