--- a/Godeps/_workspace/src/github.com/twstrike/otr3/Makefile
+++ b/Godeps/_workspace/src/github.com/twstrike/otr3/Makefile
@@ -1,7 +1,18 @@
+GO_VERSION=$(shell go version | grep  -o 'go[[:digit:]]\.[[:digit:]]')
+
+
 default: deps lint test
 
 lint:
+ifeq ($(GO_VERSION), go1.3)
+	echo "Your version of Go is too old for running lint"
+else
+ifeq ($(GO_VERSION), go1.4)
+	echo "Your version of Go is too old for running lint"
+else
 	golint ./...
+endif
+endif
 
 test:
 	go test -cover -v ./...
@@ -12,7 +23,14 @@ test-slow:
 ci: lint test test-slow
 
 deps:
-	./deps.sh
+ifeq ($(GO_VERSION), go1.3)
+else
+ifeq ($(GO_VERSION), go1.4)
+else
+	go get github.com/golang/lint/golint
+endif
+endif
+	go get golang.org/x/tools/cmd/cover
 
 cover:
 	go test . -coverprofile=coverage.out
